<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_header">Ваш заказ принят в работу</string>
    <string name="payment_text">Подтверждение заказа №104893 может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="payment_super">Супер!</string>
    <string name="departure_from">Вылет из</string>
    <string name="country_city">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="nights_count">Кол-во ночей</string>
    <string name="hotel">Отель</string>
    <string name="room">Номер</string>
    <string name="nutrition">Питание</string>
    <string name="phone_number">Номер телефона</string>
    <string name="hint_phone">+7 (987) 654-32-10</string>
    <string name="email">Почта</string>
    <string name="example_mail">example@mail.ru</string>
    <string name="buyer_info">Информация о покупателе</string>
    <string name="buyer_info_data_safety">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="birthday">День рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_number">Номер загранпаспорта</string>
    <string name="passport_validity_period">Срок действия загранпаспорта</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="tour">Тур</string>
    <string name="service_charge">Сервисный сбор</string>
    <string name="fuel_charge">Топливный сбор</string>
    <string name="to_pay">К оплате</string>
    <string name="to_pay_price">К оплате %1$d Р</string>
    <string name="toggle_tourist_input_visibility">Показать/скрыть поля ввода данных туриста</string>
    <string name="payment_success">Заказ оплачен</string>
    <string name="booking">Бронирование</string>
    <string name="tour_dates">%1$s - %2$s</string>
    <string name="nights_count_data">%1$d ночей</string>
    <string name="tour_price">%1$d</string>
    <string name="price">%1$d Р</string>
    <string name="field_should_not_be_empty">Поле не должно быть пустым</string>
    <string name="invalid_email">Неверный формат почты</string>
</resources>