<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/frame_16"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/TextAppearance.HotelsApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyer_info"
        android:textSize="22sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        app:placeholderText="@string/hint_phone">

        <ru.mrkurilin.hotelsApp.ui.views.PhoneInputEditText
            android:id="@+id/phone_text_field"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/frame_16"
            android:backgroundTint="@color/primary_background"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="19"
            android:maxLines="1"
            android:nextFocusDown="@id/email_text_field"
            android:padding="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        app:placeholderText="@string/example_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_field"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/frame_16"
            android:backgroundTint="@color/primary_background"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyer_info_data_safety" />

</LinearLayout>